Adding skeleton for api calss to fetch overlap
