# src/main/resources/user_openapi.yml
@@ -198,6 +198,33 @@ paths:
         '404':
           description: Not Found
 
+  '/fetch-overlap':
+    get:
+      tags:
+        - user-availability-overlap
+      summary: fetch user availability overlap
+      description: fetch user availability overlap.
+      operationId: fetchUserAvailabilityOverlap
+      requestBody:
+        $ref: '#/components/requestBodies/Users'
+      responses:
+        '200':
+          description: Fetched Successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserAvailabilitySlots'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '409':
+          description: Conflict. user with given details already exists.
+
+
+
 components:
   schemas:
     Users:
@@ -281,6 +308,11 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/User'
+    Users:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Users'
 
     UserAvailabilitySlot:
       content:
